--- a/#Day2-Piano Application/style.css
+++ b/#Day2-Piano Application/style.css
@@ -24,3 +24,14 @@ h1 {
     justify-content: center;
     align-items: center;
 }
+
+.piano {
+    display: flex;
+}
+
+.key {
+    height: calc(var(--width) *4);
+    width: var(--width);
+    transition: background-color 0.2s ease;
+    position: relative;
+}
