--- a/#Day2-Piano Application/style.css
+++ b/#Day2-Piano Application/style.css
@@ -35,3 +35,43 @@ h1 {
     transition: background-color 0.2s ease;
     position: relative;
 }
+
+.white {
+    --width:100px;
+    background: linear-gradient(to bottom, #ffffff, #f3f3f3);
+    border: 1px solid #333;
+    border-radius: 0px 0px 10px 10px;
+    color: #333
+}
+
+.white:active {
+    background-color: #ccc;
+}
+
+.black {
+     --width:60px;
+    background: linear-gradient(to bottom, #000000, #333333);
+    border: 1px solid #333;
+    margin-left: calc(var(--width) /-2);
+    margin-right: calc(var(--width) /-2);
+    z-index: 2;
+    border-radius: 0px 0px 8px 8px;
+    color: #fff;
+}
+
+.note-label {
+    font-size: 12px;
+    color: inherit;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.black:active {
+    background-color: #333;
+}
+
+.key:active {
+    transform: translateY(4px);
+}
