--- a/#Day3-Text to Voice/style.css
+++ b/#Day3-Text to Voice/style.css
@@ -12,4 +12,13 @@ body {
 .container {
     width: 50%;
     margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 50px;
+    background: linear-gradient(120deg, #f6d365, #fda085);
+    border-radius: 10px;
+    overflow: hidden;
 }
+
