update style.css text selector

--- a/#Day3-Text to Voice/style.css
+++ b/#Day3-Text to Voice/style.css
@@ -22,3 +22,25 @@ body {
     overflow: hidden;
 }
 
+.container h1 {
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+.container .text {
+    width: 100%;
+    height: 120px;
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: 700;
+    line-height: 30px;
+    letter-spacing: 1px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    border: 1px solid #333;
+    background-color: beige;
+    resize: none;
+}
