--- a/#Day3-Text to Voice/style.css
+++ b/#Day3-Text to Voice/style.css
@@ -45,3 +45,17 @@ body {
     resize: none;
 }
 
+.container button {
+    width: 100%;
+    height: 50px;
+    border: none;
+    border-radius: 10px;
+    background-color: rgb(121, 227, 15);
+    color: honeydew;
+    font-size: 20px;
+    transition: ;
+}
+
+.container button:hover {
+    background-color: rgb(0, 255, 0);
+}
