--- a/#Day3-Text to Voice/style.css
+++ b/#Day3-Text to Voice/style.css
@@ -52,8 +52,10 @@ body {
     border-radius: 10px;
     background-color: rgb(121, 227, 15);
     color: honeydew;
+    font-weight: 700;
+    cursor: pointer;
     font-size: 20px;
-    transition: ;
+    transition: background-color 0.3% ease-in-out;
 }
 
 .container button:hover {
